--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 
 
   <div class="second-motion"></div>
-  
+  <div class="circleDiv"></div>
 
 
   <script src="assets/js/p5.js"></script>
   <script src="assets/js/p5.sound.js"></script>
   <script src="assets/js/sketch.js"></script>
+  <script src="assets/js/anime.min.js"></script>
 </body>
 </html>
