added circle slide animation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
 
   <div class="second-motion"></div>
-  <div class="circleDiv"></div>
+  <div class="circleDiv" id="topLeft"></div>
+  <div class="circleDiv" id="topRight"></div>
+  <div class="circleDiv" id="bottomLeft"></div>
+  <div class="circleDiv" id="bottomRight"></div>
+
 
 
   <script src="assets/js/p5.js"></script>
