--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <div class="circleDiv" id="bottomLeft"></div>
   <div class="circleDiv" id="bottomRight"></div>
 
+  <div class="rectangleDiv"></div>
 
 
   <script src="assets/js/p5.js"></script>
