added fifth motion

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 
 
   <div class="second-motion"></div>
+  <div class="fourth-motion"></div>
   <div class="circleDiv" id="topLeft"></div>
   <div class="circleDiv" id="topRight"></div>
   <div class="circleDiv" id="bottomLeft"></div>
   <div class="circleDiv" id="bottomRight"></div>
-
   <div class="rectangleDiv"></div>
+
 
   <script src="assets/js/p5.js"></script>
   <script src="assets/js/p5.sound.js"></script>
