circle fade animation

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <div class="circleDiv" id="bottomLeft"></div>
   <div class="circleDiv" id="bottomRight"></div>
   <div class="rectangleDiv"></div>
+  <div class="circle-fade"></div>
 
 
   <script src="assets/js/p5.js"></script>
