added circle fade animation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
   <div class="circleDiv" id="bottomRight"></div>
   <div class="rectangleDiv"></div>
   <div class="circle-fade"></div>
+  <div class="circle-fade"></div>
+  <div class="circle-fade"></div>
+  <div class="circle-fade"></div>
+  <div class="circle-fade"></div>
+  <div class="circle-fade"></div>
 
 
   <script src="assets/js/p5.js"></script>
