added last animation

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <div class="circle-fade"></div>
   <div class="circle-fade"></div>
   <div class="circle-fade"></div>
+  <div class="line-animation"></div>
 
 
 <svg class="zigzag-svg zigzag-left" xmlns="http://www.w3.org/2000/svg">
